Added jenkins-master-deployment.yaml for creating persistent volume to Minikube. Updated jenkins-master-deployment.yaml to create mountpaths to persistent volume. Updated Readme.md due to jenkins-persistent-volume.yaml.

--- a/jenkins-master-deployment.yaml
+++ b/jenkins-master-deployment.yaml
@@ -25,7 +25,12 @@ spec:
           mountPath: /var/jenkins_home/credentials
         - name: pluginit
           mountPath: /var/jenkins_home/pluginit
+        - name: jenkins-volume
+          mountPath: /var/jenkins_home
       volumes:
+      - name: jenkins-volume
+        hostPath: 
+          path: /data/jenkins-data
       - name: docker-socket
         hostPath: 
           path: /var/run/docker.sock
