Added list of plugins in comment in plugins-txt.yaml Fixed typos in Readme.md

--- a/plugins-txt.yaml
+++ b/plugins-txt.yaml
@@ -8,3 +8,105 @@
 
   data:
     plugins.txt: ace-editor authentication-tokens branch-api cloudbees-folder conditional-buildstep credentials credentials-binding display-url-api docker-commons docker-workflow durable-task git git-client git-server google-container-registry-auth google-login google-oauth-plugin handlebars icon-shim javadoc jquery-detached junit kubernetes momentjs parameterized-trigger pipeline-build-step pipeline-graph-analysis pipeline-input-step pipeline-model-api pipeline-model-definition pipeline-model-extensions pipeline-milestone-step pipeline-rest-api pipeline-stage-step pipeline-stage-tags-metadata pipeline-stage-view promoted-builds subversion support-core workflow-aggregator workflow-basic-steps workflow-cps-global-lib workflow-job workflow-multibranch mapdb-api metrics blueocean simple-theme-plugin docker-build-step
+    
+    # List of plugins: 
+    #
+    # Ant Plugin (ant)
+    # Authentication Tokens API Plugin (authentication-tokens)
+    # Blue Ocean (blueocean)
+    # Blue Ocean Pipeline Editor (blueocean-pipeline-editor)
+    # BlueOcean Display URL plugin (blueocean-display-url)
+    # Branch API Plugin (branch-api)
+    # Common API for Blue Ocean (blueocean-commons)
+    # Conditional BuildStep (conditional-buildstep)
+    # Config API for Blue Ocean (blueocean-config)
+    # Credentials Binding Plugin (credentials-binding)
+    # Credentials Plugin (credentials)
+    # Dashboard for Blue Ocean (blueocean-dashboard)
+    # Display URL API (display-url-api)
+    # Docker Commons Plugin (docker-commons)
+    # Docker Pipeline (docker-workflow)
+    # Durable Task Plugin (durable-task)
+    # Events API for Blue Ocean (blueocean-events)
+    # External Monitor Job Type Plugin (external-monitor-job)
+    # Favorite (favorite)
+    # Folders Plugin (cloudbees-folder)
+    # GIT server Plugin (git-server)
+    # Git Pipeline for Blue Ocean (blueocean-git-pipeline)
+    # Git client plugin (git-client)
+    # Git plugin (git)
+    # GitHub API Plugin (github-api)
+    # GitHub Branch Source Plugin (github-branch-source)
+    # GitHub Pipeline for Blue Ocean (blueocean-github-pipeline)
+    # GitHub plugin (github)
+    # Google Container Registry Auth Plugin (google-container-registry-auth)
+    # Google Login Plugin (google-login)
+    # Google OAuth Credentials plugin (google-oauth-plugin)
+    # Icon Shim Plugin (icon-shim)
+    # JUnit Plugin (junit)
+    # JWT for Blue Ocean (blueocean-jwt)
+    # Jackson 2 API Plugin (jackson2-api)
+    # JavaScript GUI Lib: ACE Editor bundle plugin (ace-editor)
+    # JavaScript GUI Lib: Handlebars bundle plugin (handlebars)
+    # JavaScript GUI Lib: Moment.js bundle plugin (momentjs)
+    # JavaScript GUI Lib: jQuery bundles (jQuery and jQuery UI) plugin (jquery-detached)
+    # Javadoc Plugin (javadoc)
+    # Kubernetes plugin (kubernetes)
+    # LDAP Plugin (ldap)
+    # Mailer Plugin (mailer)
+    # MapDB API Plugin (mapdb-api)
+    # Matrix Authorization Strategy Plugin (matrix-auth)
+    # Matrix Project Plugin (matrix-project)
+    # Maven Integration plugin (maven-plugin)
+    # Metrics Plugin (metrics)
+    # OAuth Credentials plugin (oauth-credentials)
+    # OWASP Markup Formatter Plugin (antisamy-markup-formatter)
+    # PAM Authentication plugin (pam-auth)
+    # Parameterized Trigger plugin (parameterized-trigger)
+    # Personalization for Blue Ocean (blueocean-personalization)
+    # Pipeline (workflow-aggregator)
+    # Pipeline Graph Analysis Plugin (pipeline-graph-analysis)
+    # Pipeline REST API for Blue Ocean (blueocean-pipeline-api-impl)
+    # Pipeline: API (workflow-api)
+    # Pipeline: Basic Steps (workflow-basic-steps)
+    # Pipeline: Build Step (pipeline-build-step)
+    # Pipeline: Declarative Agent API (pipeline-model-declarative-agent)
+    # Pipeline: Declarative Extension Points API (pipeline-model-extensions)
+    # Pipeline: Groovy (workflow-cps)
+    # Pipeline: Input Step (pipeline-input-step)
+    # Pipeline: Job (workflow-job)
+    # Pipeline: Milestone Step (pipeline-milestone-step)
+    # Pipeline: Model API (pipeline-model-api)
+    # Pipeline: Model Definition (pipeline-model-definition)
+    # Pipeline: Multibranch (workflow-multibranch)
+    # Pipeline: Nodes and Processes (workflow-durable-task-step)
+    # Pipeline: REST API Plugin (pipeline-rest-api)
+    # Pipeline: SCM Step (workflow-scm-step)
+    # Pipeline: Shared Groovy Libraries (workflow-cps-global-lib)
+    # Pipeline: Stage Step (pipeline-stage-step)
+    # Pipeline: Stage Tags Metadata (pipeline-stage-tags-metadata)
+    # Pipeline: Stage View Plugin (pipeline-stage-view)
+    # Pipeline: Step API (workflow-step-api)
+    # Pipeline: Supporting APIs (workflow-support)
+    # Plain Credentials Plugin (plain-credentials)
+    # Pub-Sub "light" Bus (pubsub-light)
+    # REST API for Blue Ocean (blueocean-rest)
+    # REST Implementation for Blue Ocean (blueocean-rest-impl)
+    # Run Condition Plugin (run-condition)
+    # SCM API Plugin (scm-api)
+    # SSH Credentials Plugin (ssh-credentials)
+    # Script Security Plugin (script-security)
+    # Server Sent Events (SSE) Gateway Plugin (sse-gateway)
+    # Simple Theme Plugin (simple-theme-plugin)
+    # Structs Plugin (structs)
+    # Subversion Plug-in (subversion)
+    # Support Core Plugin (support-core)
+    # Token Macro Plugin (token-macro)
+    # Variant Plugin (variant)
+    # Web for Blue Ocean (blueocean-web)
+    # Windows Slaves Plugin (windows-slaves)
+    # blueocean-autofavorite (blueocean-autofavorite)
+    # bouncycastle API Plugin (bouncycastle-api)
+    # docker-build-step (docker-build-step)
+    # i18n for Blue Ocean (blueocean-i18n)
+    # promoted builds plugin (promoted-builds)
