--- a/jenkins-master-deployment.yaml
+++ b/jenkins-master-deployment.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: master
-        image: eu.gcr.io/ptcs-docker-registry/jenkinsci/jenkins:1.00
+        image: docker.io/ptcos/jenkins-ci-master:0.0.1
         ports:
         - containerPort: 8080
         - containerPort: 50000
