Major update: - Project will now use original Jenkins Docker image for clean start and easier upgrade - Removed static configs, plugins and credentials to avoid problems when not using the files and easier plugin updates - Updated README to configure Kubernetes slaves to be used

--- a/jenkins-master-deployment.yaml
+++ b/jenkins-master-deployment.yaml
@@ -12,24 +12,14 @@ spec:
     spec:
       containers:
       - name: master
-        image: docker.io/ptcos/ci-jenkins-master:latest
+        image: jenkins/jenkins:2.60.3
         ports:
         - containerPort: 8080
         - containerPort: 50000
         volumeMounts: 
-        - name: docker-socket
-          mountPath: /var/run/docker.sock
-        - name: pluginit
-          mountPath: /var/jenkins_home/pluginit
         - name: jenkins-volume
           mountPath: /var/jenkins_home
       volumes:
       - name: jenkins-volume
         hostPath: 
           path: /data/jenkins-data
-      - name: docker-socket
-        hostPath: 
-          path: /var/run/docker.sock
-      - name: pluginit
-        configMap: 
-          name: plugins-txt
